styles/Header.module.css
.header {
  display: flex;
  flex-direction: column;
}

.header__logoBanner {
  width: 25%;
  height: auto;
  box-sizing: border-box;
}

.header__logoContainer {
  display: flex;
  justify-content: center;
  background-color: var(--color-header);
  padding: 1rem;  
}

.header__logoContainerLink {
  text-decoration: none;
  display: inline-flex;
  width: 100%;
  justify-content: center;
}

.header__logoContainerLink:focus {
  outline-width: 0;
  box-shadow: var(--color-primary) 0 0 0 0.25rem;
  transition: box-shadow var(--global-transition-time) ease 0s;
}

.header__logoContainerLink:focus:active {
  outline-width: 0;
  box-shadow: unset;
}

.header__logo {
  height: 4rem;
  margin: 0 1rem;
}

.header__nav {
  display: flex;
  justify-content: center;
  background-color: var(--color-nav);
  padding: 0.5rem 1rem;
  border-bottom: 0.5rem solid var(--color-tertiary);
}

.header__navList {
  list-style: none;
  padding: 0;
}

.header__navListItem {
  padding: 0.8rem 1rem;
  text-transform: uppercase;
  color: var(--color-background);
  font-size: 1.4rem;
  line-height: 1;
  transition: color var(--global-transition-time) ease-in-out;
  display: inline-block;
  text-decoration: none;
  font-weight: var(--font-weight-bold);
}

.header__navListItem.header__navListItem__active {
  color: var(--header-nav-item-active-color);
}

.header__navListItemLink {
  color: inherit;
  text-decoration: none;
}

.header__navListItemLink:visited {
  color: inherit;
}

.header__navListItemLink:hover {
  color: inherit;
}

.header__navListItemLink:focus {
  outline-width: 0;
  box-shadow: var(--color-primary) 0 0 0 0.25rem;
  transition: box-shadow var(--global-transition-time) ease 0s;
}

.header__navListItemLink:focus:active {
  outline-width: 0;
  box-shadow: unset;
}

